Fixed clock numbers being cut off

--- a/css/flipclock.css
+++ b/css/flipclock.css
@@ -85,9 +85,9 @@
   position: absolute;
   left: 0;
   top: 0;
-  width: 100%;
-  height: 100%;
-  line-height: 87px;
+  width: 130%;
+  height: 130%;
+  line-height: 120px;
   text-decoration: none !important;
 }
 
